--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.8'
 services:
   web:
     build: .
@@ -25,6 +24,14 @@ services:
       - "1338:80"
     depends_on:
       - web
+  cron:
+    build:
+        context: .
+        dockerfile: cron/Dockerfile
+    env_file:
+      - .env
+    depends_on:
+        - db
 volumes:
   db_data:
   static_volume:
