--- a/package.json
+++ b/package.json
@@ -1,5 +1,11 @@
 {
   "devDependencies": {
+    "clean-css": "^5.3.3",
+    "clean-css-cli": "^5.6.3",
     "tailwindcss": "^3.4.3"
+  },
+  "scripts": {
+    "build": "tailwindcss build ./static/src/input.css -o ./static/css/output.css && cleancss -o ./static/css/output.min.css ./static/css/output.css",
+    "watch": "tailwindcss build ./static/src/input.css -o ./static/src/output.css --watch"
   }
 }
