--- a/requirements.txt
+++ b/requirements.txt
@@ -3,12 +3,14 @@ python3-openid~=3.2.0
 requests~=2.31.0
 requests-oauthlib~=2.0.0
 python3-saml~=1.16.0
-pyjwt~=2.8.0
+PyJWT~=2.8.0
 django-htmx~=1.17.3
 nh3~=0.2.17
 django-compressor~=4.4
 django-browser-reload~=1.12.1
 django-allauth~=0.62.1
-markdown~=3.6
+Markdown~=3.6
 django-markdownify~=0.9.3
 gunicorn~=22.0.0
+python-dotenv~=1.0.1
+psycopg2-binary~=2.9.9
