fix various problems with deployment

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,7 @@ DATABASE_PORT=5432
 DATABASE_ENGINE=django.db.backends.postgresql
 TIMEZONE='Europe/Warsaw'
 ALLOWED_HOSTS=localhost,
+CSRF_ALLOWED_ORIGINS=http://localhost:1338,
 EMAIL_HOST=
 EMAIL_PORT=587
 EMAIL_HOST_USER=
