--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -7,12 +7,15 @@ server {
 
     location / {
         proxy_pass http://web;
+        proxy_set_header Host $http_host;  # Use $http_host to preserve the port number if provided
+        proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Host $server_name;
         proxy_redirect off;
     }
 
     location /static/ {
-        alias /home/thoughts/web/static/;
+        alias /home/thoughts/web/staticfiles/;
     }
 }
